trying to get button spacing correct

--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -494,7 +494,7 @@ input {
 
 .submitAccForm, .submitLogForm, .submitRegForm  {
   margin: 0 auto;
-  margin-left: 25%;
+  padding-left: 20px;
   margin-bottom: 15px;
   background-color: #FF4500;
   color: #FFF;
